increase spacing between inputs and labels; add arkhamDB link

--- a/index.html
+++ b/index.html
@@ -19,42 +19,54 @@
             <div class="row">
                 <div class="col">
                     <h1>Arkham Horror Probability Calculator</h1>
-                    <button onclick="increment()">Button here!</button>
                 </div>
             </div>
             <div class="row">
-                <h2>Special Token Values</h2>
+                <div class="col">
+                    <a href="https://arkhamdb.com/" target="_blank">Arkham DB</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    <label>Number of Players Performing Check:</label>
+                </div>
+                <div class="col-10">
+                    <input type="number" id="playerCount" value="1">
+                </div>
+            </div>
+            <div class="row">
+                <h3>Special Token Values</h2>
                 <div class="col">
                     <div class="row">
-                        <div class="col-1">
+                        <div class="col-2">
                             <label>Skull:</label>
                         </div>
-                        <div class="col-11">
-                            <input type="number" id="skullValue">
+                        <div class="col-10">
+                            <input type="number" id="skullValue" value="0">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-1">
+                        <div class="col-2">
                             <label>Cultist:</label>
                         </div>
-                        <div class="col-11">
-                            <input type="number" id="cultistValue">
+                        <div class="col-10">
+                            <input type="number" id="cultistValue" value="0">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-1">
+                        <div class="col-2">
                             <label>Tablet:</label>
                         </div>
-                        <div class="col-11">
-                            <input type="number" id="tabletValue">
+                        <div class="col-10">
+                            <input type="number" id="tabletValue" value="0">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-1">
+                        <div class="col-2">
                             <label>Elder Thing:</label>
                         </div>
-                        <div class="col-11">
-                            <input type="number" id="elderThingValue">
+                        <div class="col-10">
+                            <input type="number" id="elderThingValue" value="0">
                         </div>
                     </div>
                 </div>
