add chaos token images

--- a/index.html
+++ b/index.html
@@ -39,34 +39,38 @@
                 <div class="col">
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/skull.png">
                             <label>Skull:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" id="skullValue" value="0">
+                            <input class="token-input" type="number" id="skullValue" value="0">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/cultist.png">
                             <label>Cultist:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" id="cultistValue" value="0">
+                            <input class="token-input" type="number" id="cultistValue" value="0">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/tablet.png">
                             <label>Tablet:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" id="tabletValue" value="0">
+                            <input class="token-input" type="number" id="tabletValue" value="0">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/elder-thing.png">
                             <label>Elder Thing:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" id="elderThingValue" value="0">
+                            <input class="token-input" type="number" id="elderThingValue" value="0">
                         </div>
                     </div>
                 </div>
@@ -104,10 +108,11 @@
                     </div>
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/star.png">
                             <label>Star Modifier:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" name="starModifier" data-index="1" value="0">
+                            <input class="token-input" type="number" name="starModifier" data-index="1" value="0">
                         </div>
                     </div>
                 </div>
@@ -145,10 +150,11 @@
                     </div>
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/star.png">
                             <label>Star Modifier:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" name="starModifier" data-index="2" value="1">
+                            <input class="token-input" type="number" name="starModifier" data-index="2" value="1">
                         </div>
                     </div>
                 </div>
@@ -186,10 +192,11 @@
                     </div>
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/star.png">
                             <label>Star Modifier:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" name="starModifier" data-index="3" value="0">
+                            <input class="token-input" type="number" name="starModifier" data-index="3" value="0">
                         </div>
                     </div>
                 </div>
@@ -227,10 +234,11 @@
                     </div>
                     <div class="row">
                         <div class="col-2">
+                            <img class="token" src="images/tokens/star.png">
                             <label>Star Modifier:</label>
                         </div>
                         <div class="col-10">
-                            <input type="number" name="starModifier" data-index="4" value="0">
+                            <input class="token-input" type="number" name="starModifier" data-index="4" value="0">
                         </div>
                     </div>
                 </div>
