create characters constant file and set input values based on character constants

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
         <!-- Bootstrap CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="bootstrap/css/bootstrap-grid.css" rel="stylesheet">
+
+        <!-- Arkham Horror LCG Calculator Custom CSS -->
         <link href="css/style.css" rel="stylesheet">
+
+        <!-- JQuery -->
         <script src="js/jquery-3.6.0.min.js"></script>
+
+        <!-- Arkham Horror LCG Calculator Custom JS -->
+        <script src="js/characters.js"></script>
         <script src="js/calculator.js"></script>
 
         <title>Arkham Horror LCG Probability Calculator</title>
@@ -85,7 +92,7 @@
                             <label>Character Name (optional): </label>
                         </div>
                         <div class="col-9">
-                            <input type="text" name="characterName" data-index="1" value="Daisy">
+                            <input type="text" name="characterName" data-index="1" value="">
                         </div>
                     </div>
                 </div>
@@ -127,7 +134,7 @@
                             <label>Character Name (optional): </label>
                         </div>
                         <div class="col-9">
-                            <input type="text" name="characterName" data-index="2" value="Zoey">
+                            <input type="text" name="characterName" data-index="2" value="">
                         </div>
                     </div>
                 </div>
@@ -154,7 +161,7 @@
                             <label>Star Modifier:</label>
                         </div>
                         <div class="col-10">
-                            <input class="token-input" type="number" name="starModifier" data-index="2" value="1">
+                            <input class="token-input" type="number" name="starModifier" data-index="2" value="0">
                         </div>
                     </div>
                 </div>
